Bug 1289254 - Support dnd for webkitdirectory, r=baku

--HG--
extra : rebase_source : dafc058127ea6ededb6df0ec7bcf6f9fbff36202