dom/ipc/Blob.cpp
@@ -1713,7 +1713,16 @@ protected:
 
   const bool mIsSlice;
 
+  const bool mIsDirectory;
+
 public:
+
+  enum BlobImplIsDirectory
+  {
+    eNotDirectory,
+    eDirectory
+  };
+
   // For File.
   RemoteBlobImpl(BlobChild* aActor,
                  BlobImpl* aRemoteBlobImpl,
@@ -1722,6 +1731,7 @@ public:
                  const nsAString& aPath,
                  uint64_t aLength,
                  int64_t aModDate,
+                 BlobImplIsDirectory aIsDirectory,
                  bool aIsSameProcessBlob);
 
   // For Blob.
@@ -1774,6 +1784,9 @@ public:
 
   virtual void
   GetMozFullPathInternal(nsAString& aFileName, ErrorResult& aRv) const override;
+
+  virtual bool
+  IsDirectory() const override;
 
   virtual already_AddRefed<BlobImpl>
   CreateSlice(uint64_t aStart,
@@ -1948,6 +1961,9 @@ public:
   virtual void
   GetMozFullPathInternal(nsAString& aFileName, ErrorResult& aRv) const override;
 
+  virtual bool
+  IsDirectory() const override;
+
   virtual uint64_t
   GetSize(ErrorResult& aRv) override;
 
@@ -2034,9 +2050,10 @@ RemoteBlobImpl::RemoteBlobImpl(BlobChild* aActor,
                                const nsAString& aPath,
                                uint64_t aLength,
                                int64_t aModDate,
+                               BlobImplIsDirectory aIsDirectory,
                                bool aIsSameProcessBlob)
   : BlobImplBase(aName, aContentType, aLength, aModDate)
-  , mIsSlice(false)
+  , mIsSlice(false), mIsDirectory(aIsDirectory == eDirectory)
 {
   SetPath(aPath);
 
@@ -2058,7 +2075,7 @@ RemoteBlobImpl::RemoteBlobImpl(BlobChild* aActor,
                                uint64_t aLength,
                                bool aIsSameProcessBlob)
   : BlobImplBase(aContentType, aLength)
-  , mIsSlice(false)
+  , mIsSlice(false), mIsDirectory(false)
 {
   if (aIsSameProcessBlob) {
     MOZ_ASSERT(aRemoteBlobImpl);
@@ -2074,7 +2091,7 @@ RemoteBlobImpl::RemoteBlobImpl(BlobChild* aActor,
 BlobChild::
 RemoteBlobImpl::RemoteBlobImpl(BlobChild* aActor)
   : BlobImplBase(EmptyString(), EmptyString(), UINT64_MAX, INT64_MAX)
-  , mIsSlice(false)
+  , mIsSlice(false), mIsDirectory(false)
 {
   CommonInit(aActor);
 }
@@ -2084,6 +2101,7 @@ RemoteBlobImpl::RemoteBlobImpl(const nsAString& aContentType, uint64_t aLength)
   : BlobImplBase(aContentType, aLength)
   , mActor(nullptr)
   , mIsSlice(true)
+  , mIsDirectory(false)
 {
   mImmutable = true;
 }
@@ -2194,6 +2212,13 @@ RemoteBlobImpl::GetMozFullPathInternal(nsAString& aFilePath,
   }
 
   aFilePath = filePath;
+}
+
+bool
+BlobChild::
+RemoteBlobImpl::IsDirectory() const
+{
+  return mIsDirectory;
 }
 
 already_AddRefed<BlobImpl>
@@ -2643,6 +2668,13 @@ RemoteBlobImpl::GetMozFullPathInternal(nsAString& aFileName, ErrorResult& aRv) c
   mBlobImpl->GetMozFullPathInternal(aFileName, aRv);
 }
 
+bool
+BlobParent::
+RemoteBlobImpl::IsDirectory() const
+{
+  return mBlobImpl->IsDirectory();
+}
+
 uint64_t
 BlobParent::
 RemoteBlobImpl::GetSize(ErrorResult& aRv)
@@ -2953,9 +2985,14 @@ BlobChild::CommonInit(BlobChild* aOther, BlobImpl* aBlobImpl)
     int64_t modDate = otherImpl->GetLastModified(rv);
     MOZ_ASSERT(!rv.Failed());
 
+    RemoteBlobImpl::BlobImplIsDirectory directory = otherImpl->IsDirectory() ?
+      RemoteBlobImpl::BlobImplIsDirectory::eDirectory :
+      RemoteBlobImpl::BlobImplIsDirectory::eNotDirectory;
+
     remoteBlob =
       new RemoteBlobImpl(this, otherImpl, name, contentType, path,
-                         length, modDate, false /* SameProcessBlobImpl */);
+                         length, modDate, directory,
+                         false /* SameProcessBlobImpl */);
   } else {
     remoteBlob = new RemoteBlobImpl(this, otherImpl, contentType, length,
                                     false /* SameProcessBlobImpl */);
@@ -3001,6 +3038,9 @@ BlobChild::CommonInit(const ChildBlobConstructorParams& aParams)
     case AnyBlobConstructorParams::TFileBlobConstructorParams: {
       const FileBlobConstructorParams& params =
         blobParams.get_FileBlobConstructorParams();
+      RemoteBlobImpl::BlobImplIsDirectory directory = params.isDirectory() ?
+        RemoteBlobImpl::BlobImplIsDirectory::eDirectory :
+        RemoteBlobImpl::BlobImplIsDirectory::eNotDirectory;
       remoteBlob = new RemoteBlobImpl(this,
                                       nullptr,
                                       params.name(),
@@ -3008,6 +3048,7 @@ BlobChild::CommonInit(const ChildBlobConstructorParams& aParams)
                                       params.path(),
                                       params.length(),
                                       params.modDate(),
+                                      directory,
                                       false /* SameProcessBlobImpl */);
       break;
     }
@@ -3039,6 +3080,11 @@ BlobChild::CommonInit(const ChildBlobConstructorParams& aParams)
         int64_t lastModifiedDate = blobImpl->GetLastModified(rv);
         MOZ_ASSERT(!rv.Failed());
 
+        RemoteBlobImpl::BlobImplIsDirectory directory =
+          blobImpl->IsDirectory() ?
+            RemoteBlobImpl::BlobImplIsDirectory::eDirectory :
+            RemoteBlobImpl::BlobImplIsDirectory::eNotDirectory;
+
         remoteBlob =
           new RemoteBlobImpl(this,
                              blobImpl,
@@ -3047,6 +3093,7 @@ BlobChild::CommonInit(const ChildBlobConstructorParams& aParams)
                              path,
                              size,
                              lastModifiedDate,
+                             directory,
                              true /* SameProcessBlobImpl */);
       } else {
         remoteBlob = new RemoteBlobImpl(this, blobImpl, contentType, size,
@@ -3231,7 +3278,7 @@ BlobChild::GetOrCreateFromImpl(ChildManagerType* aManager,
 
       blobParams =
         FileBlobConstructorParams(name, contentType, path, length, modDate,
-                                  blobData);
+                                  aBlobImpl->IsDirectory(), blobData);
     } else {
       blobParams = NormalBlobConstructorParams(contentType, length, blobData);
     }
@@ -3408,7 +3455,9 @@ BlobChild::SetMysteryBlobInfo(const nsString& aName,
 {
   AssertIsOnOwningThread();
   MOZ_ASSERT(mBlobImpl);
+  MOZ_ASSERT(!mBlobImpl->IsDirectory());
   MOZ_ASSERT(mRemoteBlobImpl);
+  MOZ_ASSERT(!mRemoteBlobImpl->IsDirectory());
   MOZ_ASSERT(aLastModifiedDate != INT64_MAX);
 
   mBlobImpl->SetLazyData(aName, aContentType, aLength, aLastModifiedDate);
@@ -3418,6 +3467,7 @@ BlobChild::SetMysteryBlobInfo(const nsString& aName,
                                    EmptyString(),
                                    aLength,
                                    aLastModifiedDate,
+                                   mBlobImpl->IsDirectory(),
                                    void_t() /* optionalBlobData */);
   return SendResolveMystery(params);
 }
@@ -3783,7 +3833,7 @@ BlobParent::GetOrCreateFromImpl(ParentManagerType* aManager,
 
         blobParams =
           FileBlobConstructorParams(name, contentType, path, length, modDate,
-                                    void_t());
+                                    aBlobImpl->IsDirectory(), void_t());
       } else {
         blobParams = NormalBlobConstructorParams(contentType, length, void_t());
       }
